# walBerla

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt
apps/: CMakeLists.txt
apps/benchmarks/CNT/: 01_cnt_film.cpp  Config.cpp  InitializeCNTs.cpp  InitializeCNTs.h
apps/benchmarks/FlowAroundSphereCodeGen/: CMakeLists.txt
apps/benchmarks/PhaseFieldAllenCahn/: CMakeLists.txt
apps/benchmarks/UniformGridGPU/: CMakeLists.txt  UniformGridGPU.cpp  UniformGridGPU.py  UniformGridGPU_AA.cpp  UniformGridGPU_AA.py
apps/benchmarks/UniformGridGenerated/: CMakeLists.txt
apps/channelFlow/: CMakeLists.txt  channelFlow.prm  latticeModel.py  lbmpySRT.cpp  walberlaSRT.cpp
apps/pythonmodule/: CMakeLists.txt  PythonModule.cpp
cmake/: FindFFTW3.cmake  FindFFTW3_MPI.cmake  FindMetis.cmake  FindPFFT.cmake  TestMetis.cpp  waLBerlaHelperFunctions.cmake
python/: setup.py
python/lbmpy_walberla/: walberla_lbm_generation.py
python/lbmpy_walberla/templates/: LatticeModel.tmpl.cpp  LatticeModel.tmpl.h
python/pystencils_walberla/: boundary.py  jinja_filters.py
python/pystencils_walberla/templates/: Boundary.tmpl.cpp  Boundary.tmpl.h
src/: CMakeLists.txt  walberla.h
src/blockforest/: AABBRefinementSelection.h  Block.h  BlockDataHandling.h  BlockForest.h  BlockID.h  CMakeLists.txt  GlobalLoadBalancing.h  SetupBlockForest.h  StructuredBlockForest.h
src/boundary/: BoundaryHandling.h  CMakeLists.txt
src/boundary/communication/: HandlingPackInfo.h
src/communication/: CMakeLists.txt
src/core/: CMakeLists.txt  ConcatIterator.h  DataTypes.h  Optional.h  Set.h  all.h
src/core/cell/: CellArray.h  CellVector.h
src/core/config/: CMakeLists.txt
src/core/load_balancing/: CMakeLists.txt
src/core/math/: CMakeLists.txt  Matrix2.h  Matrix3.h  Parser.cpp  Quaternion.h  Vector2.h  Vector3.h  all.h
src/core/mpi/: BufferSystem.h  BufferSystem.impl.h  BufferSystemHelper.h  BufferSystemHelper.impl.h
src/core/selectable/: SelectableObject.h  SetSelectableObject.h
src/core/timing/: TimingTree.h
src/cuda/: AddGPUFieldToStorage.h  AddGPUFieldToStorage.impl.h  CMakeLists.txt  FieldCopy.h  GPUBlockDataHandling.h  GPUField.h  GPUPdfField.h
src/cuda/communication/: UniformGPUScheme.impl.h
src/domain_decomposition/: BlockDataHandling.h  BlockStorage.h  CMakeLists.txt  IBlock.h  StructuredBlockStorage.h
src/executiontree/: CMakeLists.txt  ExecutionTree.h
src/fft/: CMakeLists.txt
src/field/: AddToStorage.h  Field.h  Field.impl.h  FlagField.h  FlagField.impl.h  Gather.h  GhostLayerField.h  GhostLayerField.impl.h  Printers.h  Printers.impl.h  StabilityChecker.h
src/field/adaptors/: GhostLayerFieldAdaptor.h  VectorFieldAccessor.h
src/field/allocation/: FieldAllocator.h
src/field/blockforest/: BlockDataHandling.h
src/field/communication/: PackInfo.h  ReducePackInfo.h  StencilRestrictedMPIDatatypeInfo.h  StencilRestrictedPackInfo.h  UniformMPIDatatypeInfo.h  UniformPullReductionPackInfo.h
src/field/iterators/: FieldIterator.h  FieldIterator.impl.h  FieldPointer.h
src/field/refinement/: PackInfo.h
src/field/vtk/: FlagFieldMapping.h  VTKWriter.h
src/geometry/: CMakeLists.txt
src/geometry/containment_octree/: BranchNode.h  IndeterminateLeafNode.h  InsideLeafNode.h  LeafNode.h  OutsideLeafNode.h
src/geometry/initializer/: OverlapFieldFromBody.cpp  OverlapFieldFromBody.h  ScalarFieldFromGrayScaleImage.cpp
src/geometry/structured/: GrayScaleImage.cpp  RGBAImage.cpp
src/gui/: CMakeLists.txt
src/lbm/: CMakeLists.txt  all.h
src/lbm/blockforest/: PostProcessing.h
src/lbm/boundary/: DiffusionDirichlet.h
src/lbm/communication/: SparsePdfFieldPackInfo.h
src/lbm/field/: AddToStorage.h  CMakeLists.txt  Density.h  PdfField.h
src/lbm/lattice_model/: D2Q9.h  D3Q15.h  D3Q19.h  D3Q27.h
src/lbm/refinement/: EqualLevelBorderStreamCorrection.h  LinearExplosion.h  PdfFieldPackInfo.h  TimeStep.h
src/lbm/vtk/: Density.h  NonEquilibrium.h  Velocity.h
src/lbm_mesapd_coupling/amr/: CMakeLists.txt
src/mesa_pd/: CMakeLists.txt
src/mesa_pd/collision_detection/: BroadPhase.h
src/mesa_pd/common/: ParticleFunctions.h
src/mesa_pd/domain/: BlockForestDataHandling.h
src/mesa_pd/kernel/: ParticleSelector.h
src/mesh/: CMakeLists.txt
src/mesh/boundary/: BoundarySetup.h  BoundaryUIDFaceDataSource.h
src/mesh/pe/: CMakeLists.txt
src/mesh_common/: CMakeLists.txt  QHull.h
src/mesh_common/distance_octree/: BranchNode.h  LeafNode.h
src/mesh_common/vtk/: CommonDataSources.h  VTKMeshWriter.h
src/pe/amr/: CMakeLists.txt
src/pe/ccd/: HashGrids.h  ICCD.h  SimpleCCD.h
src/pe/communication/: CMakeLists.txt
src/pe/cr/: DEM.h  HCSITS.h  HCSITS.impl.h  PlainIntegrator.h
src/pe/fcd/: SimpleFCD.h
src/pe/raytracing/: Raytracer.cpp
src/pe/rigidbody/: BodyIterators.h  MPIRigidBodyTrait.h  StorageDataHandling.h
src/pe_coupling/partially_saturated_cells_method/: PSMSweep.h
src/postprocessing/: CMakeLists.txt
src/python_coupling/: CMakeLists.txt
src/simd/: CMakeLists.txt
src/stencil/: CMakeLists.txt
src/timeloop/: CMakeLists.txt  SweepTimeloop.cpp  Timeloop.h
src/vtk/: BlockCellDataWriter.h  VTKOutput.h
tests/: CMakeLists.txt
tests/blockforest/: CMakeLists.txt  SaveLoadTest.cpp
tests/core/: CMakeLists.txt
tests/cuda/: CMakeLists.txt
tests/cuda/codegen/: CMakeLists.txt  LbCodeGenerationExampleGPU.cpp  LbCodeGenerationExampleGPU.prm  LbCodeGenerationExampleGPU.py
tests/cuda/communication/: GPUBlockSelectorCommunicationTest.cpp
tests/domain_decomposition/: PeriodicIntersect.cpp
tests/field/: FieldGatherTest.cpp  FieldTest.cpp
tests/gui/: CMakeLists.txt
tests/lbm/: CMakeLists.txt
tests/pe/: Raytracing.cpp
utilities/: refactorCMake.py
(+29 files in other folders)
