###################################################################################################
#
# Module fft 
#
###################################################################################################

add_library( fft )
target_link_libraries( fft PUBLIC core blockforest field ${FFT_REQUIRED_LIBRARIES} )
target_sources( fft
      PRIVATE
      Fft.h
      Fft.cpp
      )

###################################################################################################
